# yt-media-storage

./: CMakeLists.txt
.github/workflows/: build-windows.yml
